syntax = "proto3";
package zetachain.zetacore.pkg.proofs.bitcoin;

option go_package = "github.com/zeta-chain/node/pkg/proofs/bitcoin";

message Proof {
  bytes tx_bytes = 1;
  bytes path = 2;
  uint32 index = 3;
}
